gitignore LDWF data

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 .Rhistory
 .RData
 .Ruserdata
+blue_crab_ldwf_annual.csv
+blue_crab_ldwf_seasonal.csv 
+brown_shrimp_ldwf_annual.csv
+brown_shrimp_seasonal_ldwf.csv
+McCann_etal_species_in_nodes.xlsx
+~$McCann_etal_species_in_nodes.xlsx
